# skeleton-python-binary

./: README.rst  cookiecutter.json
hooks/: pre_gen_project.py
tests/: test_generation.py
{{cookiecutter.project_slug}}/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: test-and-deploy.yml
{{cookiecutter.project_slug}}/docker/: Dockerfile  build.sh  commit-dev.sh  remove-dev.sh  run-dev.sh
{{cookiecutter.project_slug}}/docs/source/: applicable_docs.rst  conf.py  conventions.rst  external_view.rst  glossary.rst  history.rst  index.rst  introduction.rst  old_modules.rst  operation_manual.rst  operations_basics  operations_basics.rst  operations_environment.rst  purpose.rst  reference_manual.rst  tutorial.rst
{{cookiecutter.project_slug}}/docs/source/_static/: my-styles.css
{{cookiecutter.project_slug}}/docs/source/_templates/: layout.html
{{cookiecutter.project_slug}}/scripts/: data_download.py  init_remote_repo.bash  install-hooks.bash  license.py
{{cookiecutter.project_slug}}/tests/: {{cookiecutter.project_slug}}_test.py
{{cookiecutter.project_slug}}/tests/acceptance/: docker_test.py
{{cookiecutter.project_slug}}/tests/unit/: monitoring_test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _version.py  custom_logging.py  logging.conf  monitoring.py  {{cookiecutter.project_slug}}.py
