[tool.flit.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.__main__:run"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "{{cookiecutter.project_slug}}"
readme = "README.rst"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>", ]
license = {% if cookiecutter.open_source_license == 'GNU General Public License v3' -%}"GPL-3.0-or-later"{% elif cookiecutter.open_source_license == 'GNU Lesser General Public License v3' -%}"LGPL-3.0-or-later"{% elif cookiecutter.open_source_license == 'GNU Affero General Public License v3' -%}"AGPL-3.0"{% endif %}
packages = [{include = "{{ cookiecutter.project_slug }}"}]
homepage = "{{cookiecutter.project_url}}"
version = "{{cookiecutter.version}}"
include = ["AUTHORS.rst","CHANGELOG","CONTRIBUTING.rst","Dockerfile","LICENSE","Makefile","pyproject.toml","README.rst","tox.ini","docker/*","docs/*","scripts/*","**/conf/*", ".dockerignore"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.__main__:run"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pre-commit = "^3.6.0"
pre-commit-hooks = "^4.5.0"
flit = "^3.9.0"
flit-core = "^3.9.0"
black = "^24.1.1"
coverage = "^7.4.1"
flake8 = "^7.0.0"
mccabe = "^0.7.0"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
tox = "^4.12.1"
Sphinx = "^7.2.6"
pip-licenses = "^4.3.4"
sphinx_rtd_theme = "^2.0.0"
pur = "^7.3.1"
sphinx-bootstrap-theme = "^0.8.1"
sphinxcontrib-plantuml = "^0.27"
pytest-html = "^4.1.1"
dockerfile-parse = "^2.0.1"
docker = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"